# tabular-similarity-v2

./: .gitignore  CLAUDE.md  create_thiroyd_data.ipynb
synthetic_proxy_eval/: README.md  agents.md  plot_paper_results.py  plot_top_metrics.py  pyproject.toml  pytest.ini
synthetic_proxy_eval/configs/: base.yaml  datasets_uci_health.yaml
synthetic_proxy_eval/src/eval_harness/: __init__.py  cli.py  download_uci.py  experiments.py  fidelity_metrics.py  generators.py  importance.py  io.py  models.py  preprocess.py  proxy_metrics.py  reports.py  stats.py  tasks.py  utility.py
synthetic_proxy_eval/tests/: conftest.py  test_cli_integration.py  test_determinism.py  test_experiments_invariance.py  test_experiments_sensitivity.py  test_fidelity_metrics.py  test_generators.py  test_golden.py  test_importance.py  test_io.py  test_preprocess.py  test_proxy_metrics.py  test_utility.py
